<resources>
    <string name="app_name">Unofficial Ups</string>
    <string name="facebook_app_id">***REMOVED***</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Main options -->
    <string name="option_timetable">Horario</string>
    <string name="option_courses">Cursos</string>
    <string name="option_attendance">Inasistencias</string>
    <string name="option_reserve">Reservas</string>
    <string name="option_logout">Cerrar sesión</string>

    <string name="error_logout">Ocurrió un error al cerrar sesión</string>

    <!-- Login -->
    <string name="text_warning_application">
        Esta es una version NO oficial del app UPC, la cual fue hecha con el único fin de
        ofrecer una mejor experiencia a los alumnos. \n\n
        Descuida, tu informacion personal no será almacenada ni compartida en nigun momento.
    </string>
    <string name="text_understood">OK, ENTIENDO</string>
    <string name="prompt_user">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="text_login">Iniciar sesión</string>
    <string name="text_remember">Recordar mis datos</string>
    <string name="text_loading_login">Iniciando sesión</string>
    <string name="error_login">Ocurrió un error al iniciar sesión</string>

    <!-- Main -->
    <string name="logout_dialog_title">Cerrar sesión</string>
    <string name="logout_dialog_message">¿Realmente deseas cerrar sesión?</string>

    <!-- Courses -->
    <string name="action_classmates">Compañeros</string>
    <string name="action_calculate">Calcular promedio</string>

    <string name="text_hint_course_progress">
        Al &lt;font color=\'#777777\'&gt; &lt;b&gt;{pct}%&lt;/b&gt;&lt;/font&gt; del curso, tienes una nota de &lt;font color=\'#777777\'&gt; &lt;b&gt;{grade}&lt;/b&gt;&lt;/font&gt;
    </string>
    <string name="text_concluded_evaluations">evaluaciones concluidas</string>
    <string name="text_loading_course_details">Cargando...</string>
    <string name="text_type">TIPO</string>
    <string name="text_weight">PESO</string>
    <string name="text_grade">NOTA</string>
    <string name="format_weight">%1$,.1f%%</string>
    <string name="text_final_assessment">NOTA FINAL</string>

    <string name="text_calculate_hint">¡Ingresa tus notas y calcula tu promedio final!</string>
    <string name="text_calculate">CALCULAR</string>
    <string name="text_calculate_result_title">Promedio: %1$,.2f</string>
    <string name="text_approved_msg">¡Buen trabajo!</string>
    <string name="text_not_approved_msg">¡Estás desaprobado!</string>
    <string name="error_fill_fields">Por favor rellena todos los campos</string>
    <string name="error_grade_out_bounds">Tu notas deben estar entre 0 y 20</string>
    <string name="error_number_invalid">Tus notas tiene que ser valores numéricos</string>
    <string name="error_getting_courses">Ocurrió un error al obtener tus cursos</string>


    <!-- Classmates -->
    <string name="title_classmates">Compañeros de clase</string>
    <string name="error_getting_classmates">Ocurrió un error al momento de obtener la información</string>


    <!-- Timetables -->
    <string name="text_test">Seccion: <b>CX43</b> </string>

    <!--Attendance -->
    <string name="text_title_course">CURSO</string>
    <string name="text_title_total">TOTAL</string>
    <string name="text_title_maximum">MÁXIMO</string>

    <!-- Reserve -->
    <string name="hint_no_reserves">Desde esta app no puedes ver las reservas que has realizado. \n\nSin embargo, <b>sí</b> puedes buscar recursos disponibles y reservarlos</string>
    <string name="title_reserve">Reservas</string>
    <string name="title_reserve_filters">Buscar reservas</string>
    <string name="text_button_reserve_search">Buscar reserva</string>
    <string name="title_reserve_options">Recursos disponibles</string>
    <string name="text_reserve_filter_hint">escoger</string>
    <string name="text_reserve_missing_filters">Completa los filtros para poder continuar</string>
    <string name="text_reserve_action">Reservar</string>
    <string name="text_reserve_pick_option">Escoje una opción para realizar tu reserva</string>
    <string name="title_reserve_confirmation">Confirmación de reserva</string>
    <string name="text_hint_reserve_confirmation">Por favor confirma que deseas reservar el recurso: %1$s</string>
    <string name="date_format_reserve">EEEE, dd MMMM</string>

    <!-- Update app -->
    <string name="title_update_app">Actualización disponible</string>
    <string name="hint_update_app">Hay una nueva versión del app disponible. Y no pienso dejar de fastidiarte hasta que la instales.</string>
    <string name="text_update">Descargar</string>

    <!-- Common -->
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_accept">Aceptar</string>
    <string name="text_cancel">Cancelar</string>
    <string name="text_remind_later">Recordar más tarde</string>


</resources>
