<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_timetable"
            android:icon="@drawable/ic_timetable_24dp"
            android:title="@string/option_timetable" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_course_24dp"
            android:title="@string/option_courses" />
        <item
            android:id="@+id/nav_attendance"
            android:icon="@drawable/ic_attendance_24dp"
            android:title="@string/option_attendance" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_24dp"
            android:title="@string/option_logout" />
    </group>


</menu>
