<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <com.brunoaybar.unofficialupc.components.base.BaseTextView
            android:id="@+id/tviName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_title_course"
            android:layout_weight="3"/>


        <com.brunoaybar.unofficialupc.components.base.BaseTextView
            android:id="@+id/tviTotal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_title_total"
            android:gravity="center"
            android:layout_weight="1"/>


        <com.brunoaybar.unofficialupc.components.base.BaseTextView
            android:id="@+id/tviMaximum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_title_maximum"
            android:gravity="center"
            android:layout_weight="1"/>


    </LinearLayout>

    <View style="@style/divider_horizontal"/>

</LinearLayout>