<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.brunoaybar.unofficalupc.modules.auth.LoginActivity">


    <LinearLayout
        android:id="@+id/llaContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:animateLayoutChanges="true"
        android:layout_centerVertical="true" >

        <ImageView
            android:layout_width="@dimen/activity_login_logo_size"
            android:layout_height="@dimen/activity_login_logo_size"
            app:srcCompat="@drawable/ic_logo"
            android:layout_gravity="center_horizontal"
            android:id="@+id/iviLogo" />

        <com.brunoaybar.unofficalupc.components.base.BaseTextView
            android:id="@+id/tviWarning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="74dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textAlignment="center"
            android:visibility="gone"
            android:text="@string/text_warning_application" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:id="@+id/llaForm">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_user">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/eteUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/prompt_password"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/btnLogin"
                style="@style/PositiveButton"
                android:layout_margin="16dp"
                android:text="@string/text_login" />


        </LinearLayout>

        <com.brunoaybar.unofficalupc.components.base.BaseButton
            android:id="@+id/btnUnderstood"
            style="@style/PositiveButton"
            android:layout_margin="16dp"
            android:text="@string/text_understood"
            android:visibility="gone" />


    </LinearLayout>




</RelativeLayout>
